--- a/weapp/termite/static/termite_js/app/component/appkit/eggdescription/eggdescription.html
+++ b/weapp/termite/static/termite_js/app/component/appkit/eggdescription/eggdescription.html
@@ -8,7 +8,7 @@
         <div class="wui-i-integral">
             <p>消耗积分:{{ component.model.expend }}</p>
             <p>奖励积分:{{ component.model.delivery }}</p>
-            <p class="xa-remainedIntegral">剩余积分:<b></b></p>
+            <p class="xa-remainedIntegral">剩余积分:<span></span></p>
         </div>
     </div>
 <div
