--- a/weapp/termite/static/termite_js/app/component/appkit/eggdescription/eggdescription.html
+++ b/weapp/termite/static/termite_js/app/component/appkit/eggdescription/eggdescription.html
@@ -3,6 +3,9 @@
 
 {% ifequal component.type 'appkit.eggdescription' %}
     <div class="wui-surveyDescription wui-eggDescription">
+        <h1 class="wui-i-innerTitle">
+            <p class="xa-title">{{component.model.title}}</p>
+        </h1>
         <div class="wui-i-egg wa-egg"></div> 
         <div class="wui-i-eggBroken wa-egg"></div>
         <div class="wui-i-integral">
