--- a/weapp/apps/customerized_apps/scratch/templates/webapp/m_scratch.html
+++ b/weapp/apps/customerized_apps/scratch/templates/webapp/m_scratch.html
@@ -93,6 +93,30 @@
         color: #454545;
         background: white;
     }
+    .container{
+        position: relative;
+        width: 80%;
+        margin: 0 auto;
+        height: 100px;
+        background: red;
+    }
+    .container .info{
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100px;
+        line-height: 100px;
+        text-align: center;
+    }
+    .container canvas{
+        position: absolute;
+        top: 0;
+        left: 0; 
+        width: 100%;  
+        height: 100px;   
+        z-index: 2;
+    }
 </style>
 {% endblock %}
 
@@ -133,7 +157,6 @@
             //更新中奖历史
             var newRecord = data.newRecord;
             if(!$.isEmptyObject(newRecord)){
-                //var new_str = "<li>" + newRecord.prize_title+ '  '+ newRecord.prize_name+'  '+newRecord.created_at + "</li>";
                 var new_str = "<li>" + newRecord.prize_title+ '&nbsp;&nbsp;&nbsp;&nbsp;'+ newRecord.prize_name+"</li>";
                 $('.wui-i-record').find('.xa-recordData').find('p').remove();
                 $('.wui-i-record').find('.xa-recordData').prepend(new_str);
@@ -181,21 +204,12 @@
                 if (!W.isMember) {
                     that.$el.hide();
                     showQrcode(W.qrcodeUrl);
-                    //$('body').html('<div class="wui-appParticipantResult-Cover"><div class="wui-qrcode">' +
-                    //        '<img height="205px" width="205px" src="'+ W.qrcodeUrl+'">' +
-                    //        '</div><div></div>');
                 }
                 else {
                     window.location.href = '/termite/workbench/jqm/preview/?module=user_center&model=user_info&action=get&workspace_id=mall&webapp_owner_id=' + W.webappOwnerId;
                 }
 
             });
-            //初始化result dialog
-            //this.$mask = $('<div class="wui-mask"></div>');
-            //this.$mask.on('click', function(){
-            //    that.close();
-            //});
-            //$('body').append(this.$mask);
             this.$el.find('.xa-closeDialog').on('click',function(){
                 that.close();
             });
@@ -224,7 +238,6 @@
                 this.$closeBtn.show();
             }else if(prize_type == 'none'){
                 this.$title.html('很遗憾').show();
-                //this.$contentHeader.html("奖品已抽光,下次请早点来!");
                 this.$contentHeader.html("没有中奖，再接再厉吧~");
                 this.$userCenter.hide();
                 this.$closeBtn.show();
@@ -260,117 +273,8 @@
             }
         };
         ResultDialog.prototype.close = function(){
-            //this.$mask.hide();
-            //$('.wui-lotterydescription').find('.wui-i-body').find(".xa-lottery-unit-"+prizeIndex).css({
-             //   'transform': 'scale(1, 1)',
-             //   '-webkit-transform': 'scale(1, 1)',
-              //  'z-index': '0'
-            //});
             mask('hide');
             this.$el.hide();
-        };
-
-        function Roulette($lottery){
-            var that = this;
-            this.index = -1;
-            this.count = 0;
-            this.timer = 0;
-            this.speed = 100;
-            this.times = 0;
-            this.cycle = 50;
-            this.prize = -1;
-            this.isRolling = false;
-            this.light_index = -1;
-            this.light_count = 0;
-            this.light_speed = 100;
-            this.lights_timer = 0;
-            this.$lottery = $lottery;
-            this.PRIZE = {
-                谢谢参与: function(){return getRandomStopPosition(['1', '5', '8', '10'])}, //谢谢参与位置
-                一等奖: function(){return getRandomStopPosition(['0', '7'])}, //一等奖位置
-                二等奖: function(){return getRandomStopPosition(['2', '4', '9'])}, //二等奖位置
-                三等奖: function(){return getRandomStopPosition(['3', '6', '11'])} //三等奖位置
-            };
-            function getRandomStopPosition(arr){
-                var len = arr.length - 1;
-                return arr[parseInt(Math.random()*len+0.5)];
-            }
-
-            //初始化
-            var len = $lottery.find(".xa-lottery-unit").length;
-            if(len>0){
-                this.count = len;
-                $lottery.find(".xa-lottery-unit-"+this.index).addClass("active");
-                //lights
-                this.light_count = $lottery.find(".xui-circle").length;
-            }else{
-                return void(0);
-            }
-        }
-        Roulette.prototype.move = function(){
-            //lottery
-            var $lottery = this.$lottery;
-            $lottery.find(".xa-lottery-unit-"+this.index).removeClass("active");
-            //$lottery.find(".xa-lottery-unit-"+this.index).css({
-             //   'transform': 'scale(1, 1)',
-             //   '-webkit-transform': 'scale(1, 1)',
-             //   'z-index': '0'
-            //});
-            this.index++;
-            if(this.index>=this.count){
-                this.index = 0;
-                this.times ++;
-            }
-            $lottery.find(".xa-lottery-unit-"+this.index).addClass("active");
-            //$lottery.find(".xa-lottery-unit-"+this.index).css({
-            //    'transform': 'scale(1.2, 1.2)',
-             //   '-webkit-transform': 'scale(1.2, 1.2)',
-             //   'z-index': '999'
-            //});
-            //lights
-            var light_index = this.light_index;
-            $lottery.find(".xa-circle-unit-"+light_index).removeClass("active");
-            light_index += 1;
-            if(light_index>this.light_count){
-                light_index = 0;
-            }
-            $lottery.find(".xa-circle-unit-"+light_index).addClass("active");
-            this.light_index = light_index;
-        };
-        Roulette.prototype.stop = function(data){
-            this.retuenData = data;
-            console.log(this.retuenData.result);
-            var index = this.PRIZE[this.retuenData.result]();
-            this.prize = parseInt(index);
-        };
-        Roulette.prototype.roll = function(){
-            this.isRolling = true;
-            this.move();
-            if(this.prize == -1 || this.times<3){
-                if(this.speed > 50) this.speed -= 10;
-            }else{
-                if(this.speed >= 250 && ((this.prize == 0 && this.index == 7) || this.prize == this.index)){
-                    clearTimeout(this.timer);
-                    this.times = 0;
-                    this.prize = -1;
-                    this.speed = 100;
-                    this.isRolling = false;
-                    prizeIndex = this.index;
-                    resultDialog = resultDialog || new ResultDialog();
-                    resultDialog.render({
-                        'prize_type': this.retuenData.prize_type,
-                        'prize_name': this.retuenData.prize_name,
-                        'delay': true
-                    });
-                    afterStop(this.retuenData);
-                    return;
-                }
-                this.speed += 20;
-            }
-            var that = this;
-            this.timer = setTimeout(function(){
-                that.roll();
-            },this.speed);
         };
     </script>
     <script type="text/javascript">
@@ -382,9 +286,9 @@
         }
 
         function initLottery(){
+            var scratch_card = new scratchCard();
             resultDialog = new ResultDialog();
-            var $container = $('.wui-lotterydescription').find('.wui-i-body');
-            var lottery = new Roulette($container);
+
             $(".xa-lottery-go").click(function(){
                 var _that = this;
                 $(this).addClass('xa-lottery-go-to');
@@ -443,7 +347,6 @@
                     id: W.appRecordId
                 },
                 success: function(data) {
-                    console.log(data);
                     var member_info = data.member_info;
                     renderDynamicData(member_info);
                     getHistory(data.scratch_history);
@@ -490,6 +393,65 @@
                 $('.wui-i-record').find('.xa-recordData').html(str_array);
             }else{
                 $('.wui-i-record').find('.xa-recordData').html('<p>还未中奖~</p>');
+            }
+        }
+
+        function scratchCard(){
+                    this.c1 = document.getElementById('cvs');
+                    this.ctx = this.c1.getContext('2d');
+                    this.isOk = 0;
+                    var fontem = parseInt(window.getComputedStyle(document.documentElement, null)["font-size"]);
+                    this.initialize();
+                }
+
+        scratchCard.prototype = {
+            initialize: function(){
+                this.c1.width = this.c1.clientWidth;  
+                this.c1.height = this.c1.clientHeight; 
+                this.bindEvent(); 
+                this.ctx.fillStyle = '#aaaaaa';
+                this.ctx.fillRect(0,0,this.c1.width,this.c1.height);  
+                this.ctx.fill();
+                this.ctx.font = 'Bold 30px Microsoft Yahei';
+                this.ctx.textAlign = 'center';
+                this.ctx.fillStyle = "#999999";
+                this.ctx.fillText("刮一刮",this.c1.width/2,this.c1.height/2);
+                this.ctx.globalCompositeOperation = 'destination-out';
+            },
+            bindEvent: function(){
+                this.c1.addEventListener('touchstart', this.eventDown.bind(this),false);
+                this.c1.addEventListener('touchend', this.eventUp.bind(this),false);
+                this.c1.addEventListener('touchmove', this.eventMove.bind(this),false);
+            },
+            eventDown: function(e){
+                e.preventDefault();
+                this.ismousedown=true;
+            },
+            eventUp: function(e){
+                e.preventDefault();
+                var a = this.ctx.getImageData(0,0,this.c1.width,this.c1.height);
+                this.ismousedown=false; 
+            },
+            eventMove: function(e){
+                console.log(e);
+                e.preventDefault();
+                if(this.ismousedown) {
+                    if(e.changedTouches){
+                        e=e.changedTouches[e.changedTouches.length-1];
+                    }
+                var containerY = document.getElementById("container").offsetTop;
+                var containerX = document.getElementById("container").offsetLeft;
+                var oX = this.c1.offsetLeft+containerX;
+                    oY = this.c1.offsetTop+containerY;
+                var x = (e.clientX + document.body.scrollLeft) - oX || 0,
+                    y = (e.clientY + document.body.scrollTop) - oY || 0;
+                this.ctx.beginPath();
+                this.ctx.arc(x, y, 20, 0, Math.PI * 2,true);
+                this.c1.style.display = 'none';
+                this.c1.offsetHeight;
+                this.c1.style.display = 'inherit'; 
+                this.ctx.fill();   
+                }
             }
         }
     </script>
