--- a/weapp/termite/static/termite_js/app/component/appkit/scratchdescription/scratchdescription.html
+++ b/weapp/termite/static/termite_js/app/component/appkit/scratchdescription/scratchdescription.html
@@ -18,95 +18,10 @@
         <div class="wui-i-roulette wui-i-header xa-remainedIntegral">
             需要消耗<strong>{{ component.model.expend }}</strong>积分, <p style="display: inline-block">剩余<b></b>积分</p>
         </div>
-        <div class="wui-i-roulette wui-i-body">
-            <div class="xui-circle xa-circle xa-circle-unit-0"></div>
-            <div class="xui-circle xa-circle xa-circle-unit-1"></div>
-            <div class="xui-circle xa-circle xa-circle-unit-2"></div>
-            <div class="xui-circle xa-circle xa-circle-unit-3"></div>
-            <div class="xui-circle xa-circle xa-circle-unit-4"></div>
-            <div class="xui-circle xa-circle xa-circle-unit-5"></div>
-            <div class="xui-circle xa-circle xa-circle-unit-6"></div>
-            <div class="xui-circle xa-circle xa-circle-unit-7"></div>
-            <div class="xui-circle xa-circle xa-circle-unit-8"></div>
-            <div class="xui-circle xa-circle xa-circle-unit-9"></div>
-            <div class="xui-circle xa-circle xa-circle-unit-10"></div>
-            <div class="xui-circle xa-circle xa-circle-unit-11"></div>
-            <div class="xui-circle xa-circle xa-circle-unit-12"></div>
-            <div class="xui-circle xa-circle xa-circle-unit-13"></div>
-            <div class="xui-circle xa-circle xa-circle-unit-14"></div>
-            <div class="xui-circle xa-circle xa-circle-unit-15"></div>
-
-            <table style="border-collapse: separate; border-spacing: 2px;">
-                <tr>
-                    <td class="xui-lottery-unit xa-lottery-unit xa-lottery-unit-0 xa-lottery-first" defaultPosition="0 -155px">
-                        {% if component.components.0.model.image %}
-                            <img src="{{ component.components.0.model.image }}">
-                        {% else %}
-                            <span style="background-position: 0 -155px;"></span>
-                        {% endif %}
-                    </td>
-                    <td class="xui-lottery-unit xa-lottery-unit xa-lottery-unit-1"><b>谢谢参与</b></td>
-                    <td class="xui-lottery-unit xa-lottery-unit xa-lottery-unit-2 xa-lottery-second" defaultPosition="0 -212px">
-                        {% if component.components.1.model.image %}
-                            <img src="{{ component.components.1.model.image }}">
-                        {% else %}
-                            <span style="background-position: 0 -212px;"></span>
-                        {% endif %}
-                    </td>
-                    <td class="xui-lottery-unit xa-lottery-unit xa-lottery-unit-3 xa-lottery-third" defaultPosition="0 -264px">
-                        {% if component.components.2.model.image %}
-                            <img src="{{ component.components.2.model.image }}">
-                        {% else %}
-                            <span style="background-position: 0 -264px;"></span>
-                        {% endif %}
-                    </td>
-                </tr>
-                <tr>
-                    <td class="xui-lottery-unit xa-lottery-unit xa-lottery-unit-11 xa-lottery-third" defaultPosition="0 -318px">
-                        {% if component.components.2.model.image %}
-                            <img src="{{ component.components.2.model.image }}">
-                        {% else %}
-                            <span style="background-position: 0 -318px;"></span>
-                        {% endif %}
-                    </td>
-                    <td class="xa-lottery-go" colspan="2" rowspan="2"></td>
-                    <td class="xui-lottery-unit xa-lottery-unit xa-lottery-unit-4 xa-lottery-second" defaultPosition="0 -47px">
-                        {% if component.components.1.model.image %}
-                            <img src="{{ component.components.1.model.image }}">
-                        {% else %}
-                            <span style="background-position: 0 -47px;"></span>
-                        {% endif %}
-                    </td>
-                </tr>
-                <tr>
-                    <td class="xui-lottery-unit xa-lottery-unit xa-lottery-unit-10"><b>谢谢参与</b></td>
-                    <td class="xui-lottery-unit xa-lottery-unit xa-lottery-unit-5"><b>谢谢参与</b></td>
-                </tr>
-                <tr>
-                    <td class="xui-lottery-unit xa-lottery-unit xa-lottery-unit-9 xa-lottery-second" defaultPosition="0 -101px">
-                        {% if component.components.1.model.image %}
-                            <img src="{{ component.components.1.model.image }}">
-                        {% else %}
-                            <span style="background-position: 0 -101px;"></span>
-                        {% endif %}
-                    </td>
-                    <td class="xui-lottery-unit xa-lottery-unit xa-lottery-unit-8"><b>谢谢参与</b></td>
-                    <td class="xui-lottery-unit xa-lottery-unit xa-lottery-unit-7 xa-lottery-first" defaultPosition="0 -155px">
-                        {% if component.components.0.model.image %}
-                            <img src="{{ component.components.0.model.image }}">
-                        {% else %}
-                            <span style="background-position: 0 -155px;"></span>
-                        {% endif %}
-                    </td>
-                    <td class="xui-lottery-unit xa-lottery-unit xa-lottery-unit-6 xa-lottery-third" defaultPosition="0 5px">
-                        {% if component.components.2.model.image %}
-                            <img src="{{ component.components.2.model.image }}">
-                        {% else %}
-                            <span style="background-position: 0 5px;"></span>
-                        {% endif %}
-                    </td>
-                </tr>
-            </table>
+        <div class="container" id="container">
+            <div class="info" id="info"></div>
+            <canvas id="cvs">
+            </canvas>
         </div>
     </div>
 <div
