--- a/weapp/termite/static/termite_js/app/component/appkit/eggdescription/eggdescription.html
+++ b/weapp/termite/static/termite_js/app/component/appkit/eggdescription/eggdescription.html
@@ -9,9 +9,9 @@
         <div class="wui-i-egg wa-egg"></div> 
         <div class="wui-i-eggBroken wa-egg"></div>
         <div class="wui-i-integral">
-            <p>消耗积分:{{ component.model.expend }}</p>
-            <p>奖励积分:{{ component.model.delivery }}</p>
-            <p class="xa-remainedIntegral">剩余积分:<span></span></p>
+            <p class="xa-eggDescription-expend">消耗积分:<strong>{{ component.model.expend }}</strong></p>
+            <p class="xa-eggDescription-delivery">奖励积分:<strong>{{ component.model.delivery }}</strong></p>
+            <p class="xa-remainedIntegral">剩余积分:<span>0</span></p>
         </div>
     </div>
 <div
