--- a/weapp/termite/static/v4/css/app_widget.css
+++ b/weapp/termite/static/v4/css/app_widget.css
@@ -2733,3 +2733,17 @@ li.wui-selectBox-display-table {
 	text-indent: 20px;
 }
 /*百宝箱 egg CSS ---- end */
+/*百宝箱 scratch CSS ---- start */
+.wui-scratchDescription {
+    background: url('') no-repeat scroll 42% 100% / 110% 100%;
+    height: 451px;
+    padding-top: 0;
+    margin-top: -40px;
+}
+.wui-scratchDescription>.wui-i-title {
+    background: url('') no-repeat scroll center center / 275px 140px rgba(0, 0, 0, 0);
+    height: 140px;
+    padding-top: 0;
+}
+
+/*百宝箱 scratch CSS ---- end */
