--- a/weapp/apps/customerized_apps/scratch/templates/webapp/m_scratch.html
+++ b/weapp/apps/customerized_apps/scratch/templates/webapp/m_scratch.html
@@ -253,7 +253,7 @@
                 this.$closeBtn.hide();
             }else if(prize_type == 'timesout'){
                 this.$title.hide();
-                this.$contentHeader.html("您今天的抽奖机会已经用完，<br>明天再来吧~");
+                this.$contentHeader.html("您今天的刮奖机会已经用完，<br>明天再来吧~");
                 this.$closeBtn.hide();
             }else if(prize_type == 'notready'){
                 this.$title.html('请耐心等待').show();
