--- a/weapp/termite/static/termite_js/app/component/appkit/scratchdescription/scratchdescription.html
+++ b/weapp/termite/static/termite_js/app/component/appkit/scratchdescription/scratchdescription.html
@@ -3,27 +3,40 @@
 
 {% ifequal component.type 'appkit.scratchdescription' %}
     <div class="wui-surveyDescription wui-lotterydescription wui-scratchDescription xa-scratchDescription" {% if component.model.scratch_bg_image %}style="background-image: url({{ component.model.scratch_bg_image }})"{% endif %}>
-        <div class="wui-i-roulette wui-i-title">
-            <h1 class="wui-i-innerTitle">
-                <p class="xa-title">{{component.model.title}}</p>
-            </h1>
+        <div class="wui-i-roulette wui-i-title"></div>
+        <div class="wui-i-card">
+            <div class="wui-i-cardContainer wa-cardContainer" id="cardContainer">
+                <div class="wui-i-cardInfo" id="info">
+                    <h2>
+                        <span>一等奖</span>
+                        <span>10元话费</span>
+                    </h2>
+                    <div class="xa-retry">再试一次</div>
+                </div>
+                <canvas id="cvs">
+                </canvas>
+            </div>
+            <div class="wui-i-cardMask">
+                <h2>刮开此图层</h2>
+            </div>
+            <div class="wui-i-hand"></div>
         </div>
         <div class="wui-i-roulette wui-i-header xa-header {% if component.model.limitation == 'no_limit' %}wui-lotterydescription-hide{% endif %}">
-            <p>您还有<b>
+            <p style="color: #f9bc04">您还有<b>
                 {% if component.model.limitation == 'once_per_user' %}1{% endif %}
                 {% if component.model.limitation == 'once_per_day' %}1{% endif %}
                 {% if component.model.limitation == 'twice_per_day' %}2{% endif %}
-                {% if component.model.limitation == 'none' %}0{% endif %}</b>次抽奖机会！</p>
+                {% if component.model.limitation == 'none' %}0{% endif %}</b>次机会</p>
         </div>
         <div class="wui-i-roulette wui-i-header xa-remainedIntegral">
             需要消耗<strong>{{ component.model.expend }}</strong>积分, <p style="display: inline-block">剩余<b></b>积分</p>
         </div>
     </div>
 <div
-    class="wui-surveyDescription xa-prizeContainer"
-    style="min-height:100px; background-color:{% if component.model.background_color %}{{ component.model.background_color }}{% else %}#8d00ab{% endif %};"
+    class="wui-surveyDescription wui-scratchContainer xa-prizeContainer"
+    style="min-height:100px; background-color:{% if component.model.background_color %}{{ component.model.background_color }}{% else %}#90150d{% endif %};"
 >
-    <div class="wui-i-subtitle" style="background-color: #8d00ab;left: 35%;position: relative;text-align: center;top: 10px;width: 30%;">
+    <div class="wui-i-subtitle" style="text-align: center;">
         <h2 class=" xa-subtitle" style="font-weight: 700;color: #ffffff;">活动说明</h2>
     </div>
 	<div class="wui-i-info p0">
@@ -70,18 +83,12 @@
                 </ul>
             </div>
         </div>
-		<div class="wui-i-time cl pt20" style="border-top: 1px solid #ab39c4; min-height: 0;color: #ffffff;font-size: 16px;">
+		<div class="wui-i-time xa-time cl pt20" style="border-top: 1px solid #ae4756; min-height: 0;color: #ffffff;font-size: 16px;">
 			<div class="wui-i-settingTitle mr15">活动时间</div>
             <div style="margin-left: 2em;margin-top: 10px;margin-bottom: 10px;">
                 <p class="wui-i-start_time">{{component.model.start_time}}</p>至<p class="wui-i-end_time">{{component.model.end_time}}</p>
             </div>
 		</div>
-        <!--
-        <i class="wui-i-sprite xui-sprite-prize"></i>
-        <div class="wui-i-prize">
-            参与送<b class="xa-delivery">{{component.model.delivery}}</b>积分
-        </div>
-        -->
         <div class="wui-i-record cl pt5 pb15">
             <div class="wui-i-settingTitle mr15 mb10">中奖记录</div>
             <div class="wui-i-recordData xa-recordData" style="margin-left: 2em;">
@@ -89,7 +96,7 @@
                 </ul>
             </div>
         </div>
-        <div class="wui-i-description xa-description cl pt15 pb15" style="font-size: 14px;margin: 0; color: white;border-top: 1px solid #ab39c4;">
+        <div class="wui-i-description xa-description cl pt15 pb15" style="font-size: 14px;margin: 0; color: white;border-top: 1px solid #ae4756;">
         <div class="wui-i-settingTitle mr15 mb10">活动规则</div>
         <div style="clear: both; margin-left: 2em;" class="wui-i-description-content">
             {{component.model.description|safe}}
