--- a/weapp/apps/customerized_apps/scratch/templates/webapp/m_scratch.html
+++ b/weapp/apps/customerized_apps/scratch/templates/webapp/m_scratch.html
@@ -108,6 +108,7 @@
         text-align: center;
         background: url('/termite_static/img/component/scratch/prize_bg.png') no-repeat;
         background-size: cover;
+        display: block;
     }
     .wui-scratchDescription .wui-i-cardContainer .wui-i-cardInfo h2{
         height: 60px;
@@ -127,6 +128,7 @@
         width: 100%;  
         height: 80px;   
         z-index: 2;
+        display: block;
     }
     .wui-scratchDescription .wui-i-cardMask{
         display: none;
